syntax = "proto3";

package kanbanpb;
option go_package = "bitbucket.org/latonaio/aion-core/proto/kanbanpb";
import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";

service Kanban {
    // 最新のCカンバンを取得する
    rpc ReceiveKanban(InitializeService) returns (stream StatusKanban);
    rpc ReceiveStaticKanban(Topic) returns (stream StaticKanban);
    rpc SendKanban(Request) returns (Response);
    rpc SendStaticKanban(StaticRequest) returns (Response);
    rpc DeleteStaticKanban(DeleteStaticRequest) returns (Response);
}

service SendAnything {
    rpc ServiceBrokerConn(stream SendKanban) returns (stream SendKanban);
    rpc SendToOtherDevices(stream SendContext) returns (UploadStatus);
}

message Topic {
    string name = 1;
}


// Cカンバンデータ
message StatusKanban {
    string startAt = 1;
    string finishAt = 2;
    string nextDeviceName = 3;
    string connectionKey = 4;
    int32 processNumber = 5;
    bool priorSuccess = 6;
    string dataPath = 7;
    repeated string fileList = 8;
    google.protobuf.Struct metadata = 9;
}

message StaticKanban {
    string id = 1;
    StatusKanban statusKanban = 2;
}

// --------------------- Send Anything Server --------------------------

message SendKanban {
    string deviceName = 1;
    string deviceAddr = 2;
    string nextService = 3;
    int32 nextNumber = 4;
    StatusKanban afterKanban = 5;
}

// FileInfo
// ディレクトリ情報を残すのであれば、relDirに相対パスを入れる。
// ファイルのみの送信時、保存先は $AION_HOME/RelDir/name となる。
message FileInfo {
    int64 size = 1;
    int32 chunkCnt = 2;
    bytes hash = 3;
    string name = 4;
    string relDir = 5;
}

// DirInfo
// filesのrelPathには、送信ディレクトリからの相対パスを入れる。
// 送信ディレクトリ自体のディレクトリ情報を残すのであれば、
// relParentDirに相対パスを入れる。
// 保存先は、$AION_HOME/RelParentPath/DirName/FileInfo.RelDir/FileInfo.name
// となる。
message DirInfo {
    int64 fileCnt = 1;
    string dirName = 2;
    string relParentPath = 3;
    repeated FileInfo files = 4;
}

message Chunk {
    bytes context = 1;
    string name = 2;
    int32 refNum = 3;
}

message StreamInfo {
    int32 fileCount = 1;
}

enum UploadRequestCode {
    SendingKanban = 0;
    SendingFile_CONT = 1;
    SendingFile_EOF = 2;
    SendingFile_FAILED = 3;
    EOS = 4;

    SendingFile_Info = 5;
    EndOfSendingFile = 6;
    SendingDirInfo = 7;
    EndOfSendingDir = 8;

    SendingStatus = 9;
}

message SendContext {
    UploadRequestCode code = 1;
    google.protobuf.Any context = 2;
}

enum UploadStatusCode {
    Unknown = 0;
    Failed = 1;
    OK = 2;
}

message UploadStatus {
    string Message = 1;
    UploadStatusCode statusCode = 2;
}

// --------------------- Status Kanban Server ---------------------------
// サービス起動時通知
message InitializeService {
    InitializeType initType = 1;
    string microserviceName = 2;
    int32 processNumber = 3;
}

enum InitializeType {
    START_SERVICE = 0;
    START_SERVICE_WITHOUT_KANBAN = 1;
}

enum ResponseStatus {
    SUCCESS = 0;
    FAILED = 1;
}

message Request {
    string microserviceName = 1;
    StatusKanban message = 2;
}

message DeleteStaticRequest {
    Topic topic = 1;
    string id = 2;
}

message StaticRequest {
    Topic topic = 1;
    StatusKanban message = 2;
}

message Response {
    ResponseStatus status = 1;
    string error = 2;
}
